# Final-Call

./: README.md  UVIRA_DocParser_Project_Report.docx
docparser/: .env.example  .gitignore  package-lock.json  package.json
docparser/apps/api/: Dockerfile  _doc3.json  _docs_dump2.json  alembic.ini  pyproject.toml  requirements.txt
docparser/apps/api/alembic/: env.py
docparser/apps/api/alembic/versions/: 0001_initial_schema.py
docparser/apps/api/scripts/: migrate_mongo_to_pg.py
docparser/apps/api/src/: config.py  database.py  exceptions.py  main.py
docparser/apps/api/src/middleware/: __init__.py  auth.py  error_handler.py  logging.py  rate_limit.py  security_headers.py
docparser/apps/api/src/models/: __init__.py  audit_log.py  base.py  document.py  tenant.py  user.py
docparser/apps/api/src/repositories/: __init__.py  audit_repository.py  base.py  deps.py  document_repository.py  user_repository.py
docparser/apps/api/src/routers/: admin.py  auth.py  customers.py  dashboard.py  documents.py  health.py  websocket.py
docparser/apps/api/src/schemas/: __init__.py  auth.py  documents.py  sap.py
docparser/apps/api/src/services/: __init__.py  auth_service.py  event_service.py  fb60_service.py  grn_service.py  miro_service.py  ocr_service.py  sap_service.py  storage_service.py  validation_service.py
docparser/apps/api/src/utils/: __init__.py  audit.py  redis_client.py  seed.py  serializer.py
docparser/apps/api/src/workers/: celery_app.py  change_stream_worker.py  event_consumer.py  f26_worker.py  fb60_worker.py  migo_worker.py  ocr_worker.py  sap_worker.py  so_worker.py
docparser/apps/web/: .eslintrc.cjs  .prettierrc  Dockerfile  index.html  nginx.conf  nginx.runtime.conf  package.json  (+3 more)
docparser/docker/: docker-compose.dev.yml  docker-compose.yml
(+58 files in other folders)
